@@ -18,3 +18,8 @@ check_password = 'uliweb.contrib.auth.models.check_password'
 
 [DECORATORS]
 require_login = 'uliweb.contrib.auth.require_login'
+
+[FORMS]
+auth.LoginForm = 'uliweb.contrib.auth.forms.LoginForm'
+auth.RegisterForm = 'uliweb.contrib.auth.forms.RegisterForm'
+auth.ChangePasswordForm = 'uliweb.contrib.auth.forms.ChangePasswordForm'
