@@ -1,0 +1,2 @@
+[FUNCTIONS]
+get_form = 'uliweb.contrib.form.get_form'
